# fosscomm22-democratize-ml

./: README.md  hugginface_playbook.ipynb  install.sh  pyproject.toml
